kube-traffic-lens-app/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-traffic-lens-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-traffic-lens
      version: v1
  template:
    metadata:
      name: kube-traffic-lens
      labels:
        app: kube-traffic-lens
        version: v1
    spec:
      containers:
      - name: app
        image: sachinthokal/kube-traffic-lens-app:v1.0.0
        ports:
        - containerPort: 8080
