kube-traffic-lens-app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-traffic-lens
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kube-traffic-lens
  template:
    metadata:
      name: kube-traffic-lens
      labels:
        app: kube-traffic-lens
    spec:
      containers:
        - name: app
          image: sachinthokal/kube-traffic-lens-app@v1.0.0
          ports:
            - containerPort: 8080
