kube-traffic-lens-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-traffic-lens-service
spec:
  selector:
    app: kube-traffic-lens   # Cover both v1 & v2 pods
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
