kube-traffic-lens-app/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kube-traffic-lens-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "app.local"   # <--- इथे FQDN किंवा योग्य डोमेन नेम द्या
