kube-traffic-lens-app/istio-traffic-split.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kube-traffic-lens-vs
spec:
  hosts:
  - "app.local"
  gateways:
  - kube-traffic-lens-gateway   # <--- हे इथे जोडणे अत्यंत महत्त्वाचे आहे!
  - mesh                        # (जर् मेशमधील अंतर्गत ट्रॅफिकसाठी हवा असेल तर)
  http:
  - route:
    - destination:
        host: kube-traffic-lens-service
        subset: v1
      weight: 50
    - destination:
        host: kube-traffic-lens-service
        subset: v2
      weight: 50
---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kube-traffic-lens-destination
spec:
  host: kube-traffic-lens-service   # Kubernetes Service Name
  subsets:
  - name: v1
    labels:
      version: v1    # V1.0.0 labels pods 
  - name: v2
    labels:
      version: v2    # V2.0.0 labels pods
